--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -5,8 +5,14 @@ project(LeetdvnUltils VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/LeetdvnConfig.cmake)
 include_directories(${LEETDVN_INCLUDE_DIR})
+
+add_subdirectory(PythonLibrary)
+set(PythonLibrary_LIBS ${PythonLibrary_BINARY_DIR}/)
+
+message("leetdvn X: ${PythonLibrary_LIBS}")
 
 set(PROJECT_SOURCES
     Definations.h,
@@ -14,5 +20,8 @@ set(PROJECT_SOURCES
 )
 
 add_executable(LeetdvnUltils
+    ${PROJECT_SOURCE}
     src/main.cpp
 )
+
+target_link_libraries(LeetdvnUltils PRIVATE ${PythonLibrary_LIBS}/PythonLibrary.dll)
